--- a/trunk/firmware/tunerstudio/rusefi.ini
+++ b/trunk/firmware/tunerstudio/rusefi.ini
@@ -4,7 +4,7 @@
 enable2ndByteCanID = false
 
 [TunerStudio]
-   queryCommand   = "H"
+   queryCommand   = "S"
    signature    = "MShift v0.01" ; signature is expected to be 7 or more characters.
 
 [Constants]
@@ -399,7 +399,7 @@ enable2ndByteCanID = false
 [OutputChannels]
 
 ; see TS_FILE_VERSION in firmware code
-fileVersion = { 20150112 }
+fileVersion = { 20150127 }
 
    ochGetCommand    = "O"
 
