--- a/trunk/firmware/rusefi_config.ini
+++ b/trunk/firmware/rusefi_config.ini
@@ -154,24 +154,26 @@ float fanOffTemperature;Cooling fan turn-off temperature threshold, in Celsuis;"
 brain_pin_e vehicleSpeedSensorInputPin;
 float vehicleSpeedCoef;This coefficient translates vehicle speed input frequency (in Hz) into vehicle speed, km/h
 
-custom canNbcType 4 bits, U32, @OFFSET@, [0:1], "BMW", "FIAT", "VAG" , "INVALID"
+custom can_nbc_e 4 bits, U32, @OFFSET@, [0:1], "BMW", "FIAT", "VAG" , "INVALID"
 can_nbc_e canNbcType;
 
 int canSleepPeriod;;"ms",    1,      0,       0,  1000.0,        2
-int cylindersCount;
 
-custom ignition_mode_e 4 bits,    U32,    %OFFSET%, [0:1], "One coil", "Individual Coils", "Wasted", "INVALID"
+custom cylinders_count_t 4 bits,    U32,    @OFFSET@, [0:3], "INVALID", 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, "INVALID", "INVALID", "INVALID"
+cylinders_count_t cylindersCount;
+
+custom ignition_mode_e 4 bits,    U32,    @OFFSET@, [0:1], "One coil", "Individual Coils", "Wasted", "INVALID"
 ignition_mode_e ignitionMode;
 
-custom firing_order_e 4 bits,    U32,    %OFFSET%, [0:2], "One Cylinder", "1-3-4-2", "1-2-4-3", "1-3-2-4", "1-5-3-6-2-4", "1-8-4-3-6-5-7-2", "INVALID", "INVALID"
+custom firing_order_e 4 bits,    U32,    @OFFSET@, [0:2], "One Cylinder", "1-3-4-2", "1-2-4-3", "1-3-2-4", "1-5-3-6-2-4", "1-8-4-3-6-5-7-2", "INVALID", "INVALID"
 firing_order_e firingOrder;
 
 float rpmMultiplier;todo: refactor this, see operation_mode_e
 
-custom display_mode_e 4 bits,    U32,    %OFFSET%, [0:1], "none", "hd44780", "hd44780 over pcf8574", "INVALID"
+custom display_mode_e 4 bits,    U32,    @OFFSET@, [0:1], "none", "hd44780", "hd44780 over pcf8574", "INVALID"
 display_mode_e displayMode;
 
-custom log_format_e 4 bits,    U32,    %OFFSET%, [0:0], "native", "Mega Log Viewer"
+custom log_format_e 4 bits,    U32,    @OFFSET@, [0:0], "native", "Mega Log Viewer"
 log_format_e logFormat;
 	int firmwareVersion;;"index",      1,      0,       0, 300,      0
 	int HD44780width;;"index",      1,      0,       0, 300,      0
@@ -179,11 +181,11 @@ log_format_e logFormat;
 	
 	adc_channel_e tpsAdcChannel;
 	int overrideCrankingIgnition;
-	int analogChartFrequency;
+	int analogChartFrequency;;"index",      1,      0,       0, 300,      0 ; size 4
 
 struct trigger_config_s @brief Trigger wheel(s) configuration
 
-custom trigger_type_e 4 bits,    U32,   %OFFSET%, [0:3], "custom toothed wheel", "ford aspire", "dodge neon", "Miata NA", "Miata NB", "GM_7X", "Cooper", "Escort GT", "60/2", "36/1", "Accord CD", "MITSU", "INVALID", "INVALID", "INVALID", "INVALID"
+custom trigger_type_e 4 bits,    U32,   @OFFSET@, [0:3], "custom toothed wheel", "ford aspire", "dodge neon", "Miata NA", "Miata NB", "GM_7X", "Cooper", "Escort GT", "60/2", "36/1", "Accord CD", "MITSU", "INVALID", "INVALID", "INVALID", "INVALID"
 	trigger_type_e type;
 
 	int customIsSynchronizationNeeded;
