--- a/trunk/firmware/tunerstudio/rusefi.ini
+++ b/trunk/firmware/tunerstudio/rusefi.ini
@@ -106,28 +106,32 @@ enable2ndByteCanID = false
 	vbattDividerCoeff				= scalar, F32,	948,	"coef", 1, 0, 0.01, 20.0, 2
 	fanOnTemperature				= scalar, F32,	952,	"*C", 1, 0, 0, 1000.0, 2
 	fanOffTemperature				= scalar, F32,	956,	"*C", 1, 0, 0, 1000.0, 2
+;skipping vehicleSpeedSensorInputPin offset 960
+;skipping vehicleSpeedCoef offset 964
+	canNbcType					 = bits, U32, 968, [0:1], "BMW", "FIAT", "VAG" , "INVALID"
+	canSleepPeriod					= scalar, S32,	972,	"ms", 1, 0, 0, 1000.0, 2
+	cylindersCount   		    = bits,    U32,    976, [0:3], "INVALID", 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, "INVALID", "INVALID", "INVALID"
+	ignitionMode				 = bits, U32, 980, [0:1], "One coil", "Individual Coils", "Wasted", "INVALID"
+	firingOrder					 = bits, U32, 984, [0:2], "One Cylinder", "1-3-4-2", "1-2-4-3", "1-3-2-4", "1-5-3-6-2-4", "1-8-4-3-6-5-7-2", "INVALID", "INVALID"
+;skipping rpmMultiplier offset 988
+	displayMode					 = bits, U32, 992, [0:1], "none", "hd44780", "hd44780 over pcf8574", "INVALID"
+	logFormat					 = bits, U32, 996, [0:0], "native", "Mega Log Viewer"
+	firmwareVersion					= scalar, S32,	1000,	"index", 1, 0, 0, 300, 0
+	HD44780width					= scalar, S32,	1004,	"index", 1, 0, 0, 300, 0
+	HD44780height					= scalar, S32,	1008,	"index", 1, 0, 0, 300, 0
+	tpsAdcChannel				 = bits, U32, 1012, [0:3] "PA0", "PA1", "PA2", "PA3", "PA4", "PA5", "PA6", "PA7", "PB0", "PB1", "PC0", "PC1", "PC2", "PC3", "PC4", "PC5"
+;skipping overrideCrankingIgnition offset 1016
+;skipping analogChartFrequency offset 1020
+	analogChartFrequency			= scalar, S32,	1020,	"index", 1, 0, 0, 300, 0 ; size 4
+	trigger_type				 = bits, U32, 1024, [0:3], "custom toothed wheel", "ford aspire", "dodge neon", "Miata NA", "Miata NB", "GM_7X", "Cooper", "Escort GT", "60/2", "36/1", "Accord CD", "MITSU", "INVALID", "INVALID", "INVALID", "INVALID"
 
 
-;	canNbcType              = bits,    U32,    968, [0:1], "BMW", "FIAT", "VAG" , "INVALID"
-	canSleepPeriod		    = scalar,  F32,    972,         "RPM",    1,      0,       0,  1000.0,        2
-	nCylinders   		    = bits,    U32,    976, [0:3], "INVALID", 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, "INVALID", "INVALID", "INVALID"
-	IgnitionMode		    = bits,    U32,    980, [0:1], "One coil", "Individual Coils", "Wasted", "INVALID"
-	FiringOrder		        = bits,    U32,    984, [0:2], "One Cylinder", "1-3-4-2", "1-2-4-3", "1-3-2-4", "1-5-3-6-2-4", "1-8-4-3-6-5-7-2", "INVALID", "INVALID"
-	rpmMultiplier		    = scalar,  F32,    988,         "RPM",    1,      0.0,       0,  1000.0,        2 ; size 4
-	displayMode		        = bits,    U32,    992, [0:1], "none", "hd44780", "hd44780 over pcf8574", "INVALID"
-	logFormat	     	    = bits,    U32,    996, [0:0], "native", "Mega Log Viewer"
-	firmwareVersion	 	    = scalar,  U32,   1000,         "index",      1,      0,       0, 300,      0 ; size 4
-	HD44780width	 	    = scalar,  U32,   1004,         "index",      1,      0,       0, 300,      0 ; size 4
-	HD44780height	 	    = scalar,  U32,   1008,         "index",      1,      0,       0, 300,      0 ; size 4
-	tpsAdcInput  	   	    = bits,    U32,   1012, [0:3]   "PA0", "PA1", "PA2", "PA3", "PA4", "PA5", "PA6", "PA7", "PB0", "PB1", "PC0", "PC1", "PC2", "PC3", "PC4", "PC5"
-	overrideCrankingIgnition= scalar,  F32,   1016,         "RPM",    1,      0.0,       0,  1000.0,        2 ; size 4
-	analogChartFrequency    = scalar,  U32,   1020,         "index",      1,      0,       0, 300,      0 ; size 4
-	trigger_type		    = bits,    U32,   1024, [0:3], "custom toothed wheel", "ford aspire", "dodge neon", "Miata NA", "Miata NB", "GM_7X", "Cooper", "Escort GT", "60/2", "36/1", "Accord CD", "MITSU", "INVALID", "INVALID", "INVALID", "INVALID"
-	isSynchronizationNeeded	= bits,    U32,   1028, [0:0], "false", "true"
-	totalToothCount		    = scalar,  F32,   1032,         "RPM",    1,      0.0,       0,  1000.0,        2 ; size 4
-	skippedToothCount	    = scalar,  F32,   1036,         "RPM",    1,      0.0,       0,  1000.0,        2 ; size 4
-	syncRatioFrom		    = scalar,  F32,   1040,         "RPM",    1,      0.0,       0,  1000.0,        2 ; size 4
-	syncRatioTo		        = scalar,  F32,   1044,         "RPM",    1,      0.0,       0,  1000.0,        2 ; size 4
+
+	trigger_customIsSynchronizationNeeded	= bits,    U32,   1028, [0:0], "false", "true"
+	trigger_customTotalToothCount		= scalar, S32,	1032,	"number", 1, 0.0, 0, 1000.0, 2
+	trigger_customSkippedToothCount		= scalar, S32,	1036,	"number", 1, 0.0, 0, 1000.0, 2
+	trigger_customSyncRatioFrom		= scalar, F32,	1040,	"number", 1, 0.0, 0, 1000.0, 2
+	trigger_customSyncRatioTo		= scalar, F32,	1044,	"number", 1, 0.0, 0, 1000.0, 2
 	useRiseEdge		        = bits,    U32,   1048, [0:0], "false", "true"
 	needSecondTriggerInput  = bits,    U32,   1052, [0:0], "false", "true"
 	vbattAdcInput           = bits,    U32,   1056, [0:3]   "PA0", "PA1", "PA2", "PA3", "PA4", "PA5", "PA6", "PA7", "PB0", "PB1", "PC0", "PC1", "PC2", "PC3", "PC4", "PC5"
@@ -724,11 +728,11 @@ fileVersion = { 20150127 }
 ;			Engine->Base Engine Settings
 	dialog = engineChars, "Base Engine Settings"
 ;		field = "Engine Preset",						engineType
-		field = "Number of Cylinders",					nCylinders
+		field = "Number of Cylinders",					cylindersCount
 		field = "Engine Displacement",         			displacement
 		field = ""
-		field = "Firing Order",							FiringOrder
-		field = "Ignition Mode",						IgnitionMode
+		field = "Firing Order",							firingOrder
+		field = "Ignition Mode",						ignitionMode
 		field = "Timing Mode",							timingMode
 		field = ""
 		field = "Global fuel correction", 				globalFuelCorrection
@@ -739,11 +743,11 @@ fileVersion = { 20150127 }
 		field = "Trigger type",							trigger_type
 	    field = "globalTriggerAngleOffset",         	globalTriggerAngleOffset
 		field = "#Custom Trigger"
-		field = "Synchronization Needed?",				isSynchronizationNeeded, {trigger_type == 0}
-		field = "total Tooth Count",					totalToothCount, {trigger_type == 0}
-		field = "skipped Tooth Count",					skippedToothCount, {trigger_type == 0}
-		field = "sync Ratio From",						syncRatioFrom, {trigger_type == 0}
-		field = "sync Ratio To",						syncRatioTo, {trigger_type == 0}
+		field = "Synchronization Needed?",				trigger_customIsSynchronizationNeeded, {trigger_type == 0}
+		field = "total Tooth Count",					trigger_customTotalToothCount, {trigger_type == 0}
+		field = "skipped Tooth Count",					trigger_customSkippedToothCount, {trigger_type == 0}
+		field = "sync Ratio From",						trigger_customSyncRatioFrom, {trigger_type == 0}
+		field = "sync Ratio To",						trigger_customSyncRatioTo, {trigger_type == 0}
 		field = "use Rise Edge?",						useRiseEdge, {trigger_type == 0}
 		field = "needed Second Trigger Input?",			needSecondTriggerInput, {trigger_type == 0}
 			
@@ -839,7 +843,7 @@ fileVersion = { 20150127 }
 	dialog = analogInputs, "Analog inputs"
 		field = "Analog Input Divider Coefficient",		analogInputDividerCoefficient 
 		field = "Battery Input Divider Coefficient",	vbattDividerCoeff
-		field = "TPS ADC input", 						tpsAdcInput
+		field = "TPS ADC input", 						tpsAdcChannel
 		field = "CLT ADC input", 						cltAdcInput
 		field = "IAT ADC input", 						iatAdcInput
 		field = "MAF ADC input", 						mafAdcInput
@@ -893,26 +897,26 @@ fileVersion = { 20150127 }
 	dialog = injectionOutputs, "Injector Output"
 		field = "injection Pin Mode",       			injectionPinMode
 		field = "Injection Pin 1",						injectionPin1
-		field = "Injection Pin 2",						injectionPin2, {nCylinders > 1}
-		field = "Injection Pin 3",						injectionPin3, {nCylinders > 2}
-		field = "Injection Pin 4",						injectionPin4, {nCylinders > 3}
-		field = "Injection Pin 5 ",						injectionPin5, {nCylinders > 4}
-		field = "Injection Pin 6 ",						injectionPin6, {nCylinders > 5}
-		field = "Injection Pin 7 ",						injectionPin7, {nCylinders > 6}
-		field = "Injection Pin 8 ",						injectionPin8, {nCylinders > 7}
-		field = "Injection Pin 9 ",						injectionPin9, {nCylinders > 8}
-		field = "Injection Pin 10 ",	    			injectionPin10, {nCylinders > 9}
-		field = "Injection Pin 11 ",					injectionPin11, {nCylinders > 10}
-		field = "Injection Pin 12 ",					injectionPin12, {nCylinders > 11}
+		field = "Injection Pin 2",						injectionPin2, {cylindersCount > 1}
+		field = "Injection Pin 3",						injectionPin3, {cylindersCount > 2}
+		field = "Injection Pin 4",						injectionPin4, {cylindersCount > 3}
+		field = "Injection Pin 5 ",						injectionPin5, {cylindersCount > 4}
+		field = "Injection Pin 6 ",						injectionPin6, {cylindersCount > 5}
+		field = "Injection Pin 7 ",						injectionPin7, {cylindersCount > 6}
+		field = "Injection Pin 8 ",						injectionPin8, {cylindersCount > 7}
+		field = "Injection Pin 9 ",						injectionPin9, {cylindersCount > 8}
+		field = "Injection Pin 10 ",	    			injectionPin10, {cylindersCount > 9}
+		field = "Injection Pin 11 ",					injectionPin11, {cylindersCount > 10}
+		field = "Injection Pin 12 ",					injectionPin12, {cylindersCount > 11}
 
 	dialog = ignitionOutputs, "Ignition Outputs"
 		field = "Ignition Pin Mode",         	        ignitionPinMode
 		field = "Ignition Pin 1",                       ignitionPin1 
-		field = "Ignition Pin 2",                       ignitionPin2, {IgnitionMode != 0 && nCylinders > 1}
-		field = "Ignition Pin 3",                       ignitionPin3, {IgnitionMode != 0 && nCylinders > 2}
-		field = "Ignition Pin 4",                       ignitionPin4, {IgnitionMode != 0 && nCylinders > 3}
-		field = "Ignition Pin 5",                       ignitionPin4, {IgnitionMode != 0 && nCylinders > 4}
-		field = "Ignition Pin 6",                       ignitionPin4, {IgnitionMode != 0 && nCylinders > 5}
+		field = "Ignition Pin 2",                       ignitionPin2, {ignitionMode != 0 && cylindersCount > 1}
+		field = "Ignition Pin 3",                       ignitionPin3, {ignitionMode != 0 && cylindersCount > 2}
+		field = "Ignition Pin 4",                       ignitionPin4, {ignitionMode != 0 && cylindersCount > 3}
+		field = "Ignition Pin 5",                       ignitionPin4, {ignitionMode != 0 && cylindersCount > 4}
+		field = "Ignition Pin 6",                       ignitionPin4, {ignitionMode != 0 && cylindersCount > 5}
 		
 	dialog = otherOutputs, "Board outputs"
 		field = "Fuel Pump Pin Mode",         	        fuelPumpPinMode
