--- a/firmware/tunerstudio/rusefi.ini
+++ b/firmware/tunerstudio/rusefi.ini
@@ -124,22 +124,20 @@ enable2ndByteCanID = false
 ;skipping analogChartFrequency offset 1020
 	analogChartFrequency			= scalar, S32,	1020,	"index", 1, 0, 0, 300, 0 ; size 4
 	trigger_type				 = bits, U32, 1024, [0:3], "custom toothed wheel", "ford aspire", "dodge neon", "Miata NA", "Miata NB", "GM_7X", "Cooper", "Escort GT", "60/2", "36/1", "Accord CD", "MITSU", "INVALID", "INVALID", "INVALID", "INVALID"
-
-
-
-	trigger_customIsSynchronizationNeeded	= bits,    U32,   1028, [0:0], "false", "true"
+	trigger_customIsSynchronizationNeeded	 = bits, U32, 1028, [0:0], "false", "true"
 	trigger_customTotalToothCount		= scalar, S32,	1032,	"number", 1, 0.0, 0, 1000.0, 2
 	trigger_customSkippedToothCount		= scalar, S32,	1036,	"number", 1, 0.0, 0, 1000.0, 2
 	trigger_customSyncRatioFrom		= scalar, F32,	1040,	"number", 1, 0.0, 0, 1000.0, 2
 	trigger_customSyncRatioTo		= scalar, F32,	1044,	"number", 1, 0.0, 0, 1000.0, 2
-	useRiseEdge		        = bits,    U32,   1048, [0:0], "false", "true"
-	needSecondTriggerInput  = bits,    U32,   1052, [0:0], "false", "true"
-	vbattAdcInput           = bits,    U32,   1056, [0:3]   "PA0", "PA1", "PA2", "PA3", "PA4", "PA5", "PA6", "PA7", "PB0", "PB1", "PC0", "PC1", "PC2", "PC3", "PC4", "PC5"
-	globalFuelCorrection    = scalar,  F32,   1060,         "RPM",    1,      0.0,       0,  1000.0,        2 ; size 4
-	cltAdcInput  		    = bits,    U32,   1064, [0:3]   "PA0", "PA1", "PA2", "PA3", "PA4", "PA5", "PA6", "PA7", "PB0", "PB1", "PC0", "PC1", "PC2", "PC3", "PC4", "PC5"
-	iatAdcInput  		    = bits,    U32,   1068, [0:3]   "PA0", "PA1", "PA2", "PA3", "PA4", "PA5", "PA6", "PA7", "PB0", "PB1", "PC0", "PC1", "PC2", "PC3", "PC4", "PC5"
-	mafAdcInput  		    = bits,    U32,   1072, [0:3]   "PA0", "PA1", "PA2", "PA3", "PA4", "PA5", "PA6", "PA7", "PB0", "PB1", "PC0", "PC1", "PC2", "PC3", "PC4", "PC5"
-	afrAdcInput  		    = bits,    U32,   1076, [0:3]   "PA0", "PA1", "PA2", "PA3", "PA4", "PA5", "PA6", "PA7", "PB0", "PB1", "PC0", "PC1", "PC2", "PC3", "PC4", "PC5"
+	trigger_customUseRiseEdge	 = bits, U32, 1048, [0:0], "false", "true"
+	hip9011SpiDevice			 = bits,U32, 1052, [0:1], "Off", "SPI1", "SPI2", "SPI3"
+	vbattAdcChannel				 = bits, U32, 1056, [0:3] "PA0", "PA1", "PA2", "PA3", "PA4", "PA5", "PA6", "PA7", "PB0", "PB1", "PC0", "PC1", "PC2", "PC3", "PC4", "PC5"
+	globalFuelCorrection			= scalar, F32,	1060,	"coef", 1, 0.0, 0, 1000.0, 2
+	cltAdcChannel				 = bits, U32, 1064, [0:3] "PA0", "PA1", "PA2", "PA3", "PA4", "PA5", "PA6", "PA7", "PB0", "PB1", "PC0", "PC1", "PC2", "PC3", "PC4", "PC5"
+	iatAdcChannel				 = bits, U32, 1068, [0:3] "PA0", "PA1", "PA2", "PA3", "PA4", "PA5", "PA6", "PA7", "PB0", "PB1", "PC0", "PC1", "PC2", "PC3", "PC4", "PC5"
+	mafAdcChannel				 = bits, U32, 1072, [0:3] "PA0", "PA1", "PA2", "PA3", "PA4", "PA5", "PA6", "PA7", "PB0", "PB1", "PC0", "PC1", "PC2", "PC3", "PC4", "PC5"
+	afrSensor_afrAdcChannel		 = bits, U32, 1076, [0:3] "PA0", "PA1", "PA2", "PA3", "PA4", "PA5", "PA6", "PA7", "PB0", "PB1", "PC0", "PC1", "PC2", "PC3", "PC4", "PC5"
+
 	afr_v1     	    	    = scalar,  F32,   1080,         "volts",    1,    0.0,       0,    10.0,        2 ; size 4
 	afr_value1		        = scalar,  F32,   1084,         "AFR",    1,      0.0,       0,  1000.0,        2 ; size 4
 	afr_v2			        = scalar,  F32,   1088,         "volts",  1,      0.0,       0,    10.0,        2 ; size 4
@@ -150,7 +148,7 @@ enable2ndByteCanID = false
 	baroMin                 = scalar,  F32,   1108,         "kpa",      1,     0,    0, 450,     2;     size 4
 	baroMax                 = scalar,  F32,   1112,         "kpa",      1,     0,    0, 450,     2;     size 4
 	baroSensorType          = bits,    U32,   1116, [0:1],  "Custom", "DENSO183", "MPX4250", "INVALID"
-	baroAdcInput            = bits,    U32,   1120, [0:3],  "PA0", "PA1", "PA2", "PA3", "PA4", "PA5", "PA6", "PA7", "PB0", "PB1", "PC0", "PC1", "PC2", "PC3", "PC4", "PC5"  
+	baroSensor_hwChannel		 = bits, U32, 1120, [0:3] "PA0", "PA1", "PA2", "PA3", "PA4", "PA5", "PA6", "PA7", "PB0", "PB1", "PC0", "PC1", "PC2", "PC3", "PC4", "PC5"
 
 	veKeyBins               = array,   F32,   1124, [16],   "Load",   1,   0.0,        0,  300.0,   2; size 64
 	veRpmBins               = array,   F32,   1188, [16],   "RPM",	   1,   0.0,        0,  18000.0, 2; size 64
@@ -748,7 +746,7 @@ fileVersion = { 20150127 }
 		field = "skipped Tooth Count",					trigger_customSkippedToothCount, {trigger_type == 0}
 		field = "sync Ratio From",						trigger_customSyncRatioFrom, {trigger_type == 0}
 		field = "sync Ratio To",						trigger_customSyncRatioTo, {trigger_type == 0}
-		field = "use Rise Edge?",						useRiseEdge, {trigger_type == 0}
+		field = "use Rise Edge?",						trigger_customUseRiseEdge, {trigger_type == 0}
 		field = "needed Second Trigger Input?",			needSecondTriggerInput, {trigger_type == 0}
 			
 ;			Engine->Injection Settings
@@ -844,13 +842,13 @@ fileVersion = { 20150127 }
 		field = "Analog Input Divider Coefficient",		analogInputDividerCoefficient 
 		field = "Battery Input Divider Coefficient",	vbattDividerCoeff
 		field = "TPS ADC input", 						tpsAdcChannel
-		field = "CLT ADC input", 						cltAdcInput
-		field = "IAT ADC input", 						iatAdcInput
-		field = "MAF ADC input", 						mafAdcInput
+		field = "CLT ADC input", 						cltAdcChannel
+		field = "IAT ADC input", 						iatAdcChannel
+		field = "MAF ADC input", 						mafAdcChannel
 		field = "MAP ADC input", 						map_sensor_hwChannel
-		field = "Baro ADC input", 						baroAdcInput
-		field = "vBatt ADC input", 						vbattAdcInput
-		field = "AFR ADC input", 						afrAdcInput
+		field = "Baro ADC input", 						baroSensor_hwChannel
+		field = "vBatt ADC input", 						vbattAdcChannel
+		field = "AFR ADC input", 						afrSensor_afrAdcChannel
 
 	dialog = analogInputMode, "Analog input mode"
 		field = "ADC on PA0",			        		adcModePA0
