--- a/trunk/firmware/rusefi_config.ini
+++ b/trunk/firmware/rusefi_config.ini
@@ -185,10 +185,13 @@ log_format_e logFormat;
 
 struct trigger_config_s @brief Trigger wheel(s) configuration
 
+
+custom bool32_t 4 bits,    U32,   @OFFSET@, [0:0], "false", "true"
+
 custom trigger_type_e 4 bits,    U32,   @OFFSET@, [0:3], "custom toothed wheel", "ford aspire", "dodge neon", "Miata NA", "Miata NB", "GM_7X", "Cooper", "Escort GT", "60/2", "36/1", "Accord CD", "MITSU", "INVALID", "INVALID", "INVALID", "INVALID"
 	trigger_type_e type;
 
-	int customIsSynchronizationNeeded;
+	bool32_t customIsSynchronizationNeeded;
 
 	int customTotalToothCount;;"number",    1,      0.0,       0,  1000.0,        2
 	int customSkippedToothCount;;"number",    1,      0.0,       0,  1000.0,        2
@@ -196,17 +199,17 @@ custom trigger_type_e 4 bits,    U32,   @OFFSET@, [0:3], "custom toothed wheel",
 	float customSyncRatioFrom;;"number",    1,      0.0,       0,  1000.0,        2
 	float customSyncRatioTo;;"number",    1,      0.0,       0,  1000.0,        2
 
-	int customUseRiseEdge;
+	bool32_t customUseRiseEdge;
 end_struct
 
 trigger_config_s trigger;
 
-!custom spi_device_e 
+custom spi_device_e 4 bits,U32,   @OFFSET@, [0:1], "Off", "SPI1", "SPI2", "SPI3" 
 	spi_device_e hip9011SpiDevice;
 	adc_channel_e vbattAdcChannel;
 	
 	
-float globalFuelCorrection;
+float globalFuelCorrection;;"coef",    1,      0.0,       0,  1000.0,        2
 
 
 	adc_channel_e cltAdcChannel;todo: merge with channel settings, use full-scale Thermistor!
