--- a/firmware/tunerstudio/rusefi.ini
+++ b/firmware/tunerstudio/rusefi.ini
@@ -136,17 +136,17 @@ enable2ndByteCanID = false
 	cltAdcChannel				 = bits, U32, 1064, [0:3] "PA0", "PA1", "PA2", "PA3", "PA4", "PA5", "PA6", "PA7", "PB0", "PB1", "PC0", "PC1", "PC2", "PC3", "PC4", "PC5"
 	iatAdcChannel				 = bits, U32, 1068, [0:3] "PA0", "PA1", "PA2", "PA3", "PA4", "PA5", "PA6", "PA7", "PB0", "PB1", "PC0", "PC1", "PC2", "PC3", "PC4", "PC5"
 	mafAdcChannel				 = bits, U32, 1072, [0:3] "PA0", "PA1", "PA2", "PA3", "PA4", "PA5", "PA6", "PA7", "PB0", "PB1", "PC0", "PC1", "PC2", "PC3", "PC4", "PC5"
-	afrSensor_afrAdcChannel		 = bits, U32, 1076, [0:3] "PA0", "PA1", "PA2", "PA3", "PA4", "PA5", "PA6", "PA7", "PB0", "PB1", "PC0", "PC1", "PC2", "PC3", "PC4", "PC5"
+	afr_hwChannel				 = bits, U32, 1076, [0:3] "PA0", "PA1", "PA2", "PA3", "PA4", "PA5", "PA6", "PA7", "PB0", "PB1", "PC0", "PC1", "PC2", "PC3", "PC4", "PC5"
+	afr_v1							= scalar, F32,	1080,	 "volts", 1, 0.0, 0, 10.0, 2
+	afr_value1						= scalar, F32,	1084,	 "AFR", 1, 0.0, 0, 1000.0, 2
+	afr_v2							= scalar, F32,	1088,	 "volts", 1, 0.0, 0, 10.0, 2
+	afr_value2						= scalar, F32,	1092,	 "AFR", 1, 0.0, 0, 1000.0, 2
 
-	afr_v1     	    	    = scalar,  F32,   1080,         "volts",    1,    0.0,       0,    10.0,        2 ; size 4
-	afr_value1		        = scalar,  F32,   1084,         "AFR",    1,      0.0,       0,  1000.0,        2 ; size 4
-	afr_v2			        = scalar,  F32,   1088,         "volts",  1,      0.0,       0,    10.0,        2 ; size 4
-	afr_value2	     	    = scalar,  F32,   1092,         "AFR",    1,      0.0,       0,  1000.0,        2 ; size 4
-	injectionOffset		    = scalar,  F32,   1096,         "RPM",    1,      0.0,       0,  1000.0,        2 ; size 4
-	crankingTimingAngle   	= scalar,  F32,   1100,         "deg",    1,      0.0,    -360,     360,        2 ; size 4
-	baroSensorType          = scalar,  U32,   1104,         "index",      1,      0,       0, 300,      0 ; size 4
-	baroMin                 = scalar,  F32,   1108,         "kpa",      1,     0,    0, 450,     2;     size 4
-	baroMax                 = scalar,  F32,   1112,         "kpa",      1,     0,    0, 450,     2;     size 4
+	injectionOffset		    = scalar,  F32,   1096,         "deg",    1,      0.0,       0,  1000.0,        2
+	crankingTimingAngle   	= scalar,  F32,   1100,         "deg",    1,      0.0,    -360,     360,        2
+	baroSensorType          = scalar,  U32,   1104,         "index",      1,      0,       0, 300,      0 
+	baroMin                 = scalar,  F32,   1108,         "kpa",      1,     0,    0, 450,     2
+	baroMax                 = scalar,  F32,   1112,         "kpa",      1,     0,    0, 450,     2
 	baroSensorType          = bits,    U32,   1116, [0:1],  "Custom", "DENSO183", "MPX4250", "INVALID"
 	baroSensor_hwChannel		 = bits, U32, 1120, [0:3] "PA0", "PA1", "PA2", "PA3", "PA4", "PA5", "PA6", "PA7", "PB0", "PB1", "PC0", "PC1", "PC2", "PC3", "PC4", "PC5"
 
@@ -848,7 +848,7 @@ fileVersion = { 20150127 }
 		field = "MAP ADC input", 						map_sensor_hwChannel
 		field = "Baro ADC input", 						baroSensor_hwChannel
 		field = "vBatt ADC input", 						vbattAdcChannel
-		field = "AFR ADC input", 						afrSensor_afrAdcChannel
+		field = "AFR ADC input", 						afr_hwChannel
 
 	dialog = analogInputMode, "Analog input mode"
 		field = "ADC on PA0",			        		adcModePA0
