--- a/trunk/firmware/rusefi_config.ini
+++ b/trunk/firmware/rusefi_config.ini
@@ -217,17 +217,17 @@ float globalFuelCorrection;;"coef",    1,      0.0,       0,  1000.0,        2
 	adc_channel_e mafAdcChannel;	
 	
 struct afr_sensor_s
-	adc_channel_e afrAdcChannel;
-	float v1;
-	float value1;
-	float v2;
-	float value2;
+	adc_channel_e hwChannel;
+	float v1;;         "volts",    1,    0.0,       0,    10.0,        2
+	float value1;;     "AFR",    1,      0.0,       0,  1000.0,        2
+	float v2;;         "volts",    1,    0.0,       0,    10.0,        2
+	float value2;;     "AFR",    1,      0.0,       0,  1000.0,        2
 
 end_struct	
 	
-afr_sensor_s afrSensor;@see hasAfrSensor
-float injectionAngle;this is about deciding when the injector starts it's squirt
-	float crankingTimingAngle;
+afr_sensor_s afr;@see hasAfrSensor
+float injectionAngle;this is about deciding when the injector starts it's squirt;"deg",    1,      0.0,       0,  1000.0,        2
+	float crankingTimingAngle;;     "deg",    1,      0.0,    -360,     360,        2
 
 	float diffLoadEnrichmentCoef;
 	
