--- a/firmware/rusefi_config.ini
+++ b/firmware/rusefi_config.ini
@@ -232,10 +232,10 @@ float injectionAngle;this is about deciding when the injector starts it's squirt
 	float diffLoadEnrichmentCoef;
 	
 air_pressure_sensor_config_s baroSensor;@see hasBaroSensor	
-float[FUEL_LOAD_COUNT] veLoadBins;
-	float[FUEL_RPM_COUNT] veRpmBins;
-	float[FUEL_LOAD_COUNT] afrLoadBins;
-	float[FUEL_RPM_COUNT] afrRpmBins;
+float[FUEL_LOAD_COUNT] veLoadBins;;1,   0.0,        0,  300.0,   2
+	float[FUEL_RPM_COUNT] veRpmBins;;"RPM",	   1,   0.0,        0,  18000.0, 2
+	float[FUEL_LOAD_COUNT] afrLoadBins;;1,   0.0,        0,  300.0,   2
+	float[FUEL_RPM_COUNT] afrRpmBins;;"RPM",	   1,   0.0,        0,  18000.0, 2
 	
 custom fuel_table_t	1024 TODO
 custom ignition_table_t	1024 TODO
