--- a/trunk/firmware/tunerstudio/rusefi.ini
+++ b/trunk/firmware/tunerstudio/rusefi.ini
@@ -141,19 +141,17 @@ enable2ndByteCanID = false
 	afr_value1						= scalar, F32,	1084,	 "AFR", 1, 0.0, 0, 1000.0, 2
 	afr_v2							= scalar, F32,	1088,	 "volts", 1, 0.0, 0, 10.0, 2
 	afr_value2						= scalar, F32,	1092,	 "AFR", 1, 0.0, 0, 1000.0, 2
-
-	injectionOffset		    = scalar,  F32,   1096,         "deg",    1,      0.0,       0,  1000.0,        2
-	crankingTimingAngle   	= scalar,  F32,   1100,         "deg",    1,      0.0,    -360,     360,        2
-	baroSensorType          = scalar,  U32,   1104,         "index",      1,      0,       0, 300,      0 
-	baroMin                 = scalar,  F32,   1108,         "kpa",      1,     0,    0, 450,     2
-	baroMax                 = scalar,  F32,   1112,         "kpa",      1,     0,    0, 450,     2
-	baroSensorType          = bits,    U32,   1116, [0:1],  "Custom", "DENSO183", "MPX4250", "INVALID"
+	injectionAngle					= scalar, F32,	1096,	"deg", 1, 0.0, 0, 1000.0, 2
+	crankingTimingAngle				= scalar, F32,	1100,	 "deg", 1, 0.0, -360, 360, 2
+;skipping diffLoadEnrichmentCoef offset 1104
+	baroSensor_valueAt0				= scalar, F32,	1108,	"kpa", 1, 0, 0, 450, 2
+	baroSensor_valueAt5				= scalar, F32,	1112,	"kpa", 1, 0, 0, 450, 2
+	baroSensor_type				 = bits, U32, 1116, [0:1] "Custom", "DENSO183", "MPX4250", "INVALID"
 	baroSensor_hwChannel		 = bits, U32, 1120, [0:3] "PA0", "PA1", "PA2", "PA3", "PA4", "PA5", "PA6", "PA7", "PB0", "PB1", "PC0", "PC1", "PC2", "PC3", "PC4", "PC5"
-
-	veKeyBins               = array,   F32,   1124, [16],   "Load",   1,   0.0,        0,  300.0,   2; size 64
-	veRpmBins               = array,   F32,   1188, [16],   "RPM",	   1,   0.0,        0,  18000.0, 2; size 64
-	afrKeyBins              = array,   F32,   1252, [16],   "Load",   1,   0.0,        0,  300.0,   2; size 64
-	afrRpmBins              = array,   F32,   1316, [16],   "RPM",	   1,   0.0,        0,  18000.0, 2; size 64
+	veLoadBins						= array, F32,	1124,	[16],	1, 0.0, 0, 300.0, 2
+	veRpmBins						= array, F32,	1188,	[16],	"RPM", 1, 0.0, 0, 18000.0, 2
+	afrLoadBins						= array, F32,	1252,	[16],	1, 0.0, 0, 300.0, 2
+	afrRpmBins						= array, F32,	1316,	[16],	"RPM", 1, 0.0, 0, 18000.0, 2
 
    ;  name           		= array,  type, offset,  shape, units,     scale, translate,    lo,      hi, digits
 	fuelTable               = array,   F32,   1380, [16x16],"ms",      1,     0,      0.0,   300.0,   2; size 1024
@@ -554,7 +552,7 @@ fileVersion = { 20150127 }
    table = veTableTbl,  veTableMap,  "VE Table",   1
       ;       constant, variable
       xBins       = veRpmBins,  rpm
-      yBins       = veKeyBins,  MAP
+      yBins       = veLoadBins,  MAP
       zBins       = veTable
 ;      gridHeight  = 2.0
       gridOrient  = 250,   0, 340 ; Space 123 rotation of grid in degrees.
@@ -563,7 +561,7 @@ fileVersion = { 20150127 }
    table = afrTableTbl,  afrTableMap,  "Target AFR Table",   1
       ;       constant, variable
       xBins       = afrRpmBins,  rpm
-      yBins       = afrKeyBins,  MAP
+      yBins       = afrLoadBins,  MAP
       zBins       = afrTable
 ;      gridHeight  = 2.0
       gridOrient  = 250,   0, 340 ; Space 123 rotation of grid in degrees.
