--- a/firmware/rusefi_config.ini
+++ b/firmware/rusefi_config.ini
@@ -20,6 +20,9 @@ float baseFuel;;"ms",       1,     0,    0, 200,     1
 int16_t rpm;This value controls what RPM values we consider 'cranking' (any RPM below 'crankingRpm')\nAnything above 'crankingRpm' would be 'running';"RPM",      1,     0,    0, 3000,      0
 end_struct
 
+custom brain_pin_e 4 bits,    U32,   @OFFSET@, [0:6], "GPIOA_0", "GPIOA_1", "GPIOA_2", "GPIOA_3", "GPIOA_4", "GPIOA_5", "GPIOA_6", "GPIOA_7", "GPIOA_8", "GPIOA_9", "GPIOA_10", "GPIOA_11", "GPIOA_12", "GPIOA_13", "GPIOA_14", "GPIOA_15",  "GPIOB_0", "GPIOB_1", "GPIOB_2", "GPIOB_3", "GPIOB_4", "GPIOB_5", "GPIOB_6", "GPIOB_7", "GPIOB_8", "GPIOB_9", "GPIOB_10", "GPIOB_11", "GPIOB_12", "GPIOB_13", "GPIOB_14", "GPIOB_15", "GPIOC_0", "GPIOC_1", "GPIOC_2", "GPIOC_3", "GPIOC_4", "GPIOC_5", "GPIOC_6", "GPIOC_7", "GPIOC_8", "GPIOC_9", "GPIOC_10", "GPIOC_11", "GPIOC_12", "GPIOC_13", "GPIOC_14", "GPIOC_15", "GPIOD_0", "GPIOD_1", "GPIOD_2", "GPIOD_3", "GPIOD_4", "GPIOD_5", "GPIOD_6", "GPIOD_7", "GPIOD_8", "GPIOD_9", "GPIOD_10", "GPIOD_11", "GPIOD_12", "GPIOD_13", "GPIOD_14", "GPIOD_15", "GPIOE_0", "GPIOE_1", "GPIOE_2", "GPIOE_3", "GPIOE_4", "GPIOE_5", "GPIOE_6", "GPIOE_7", "GPIOE_8", "GPIOE_9", "GPIOE_10", "GPIOE_11", "GPIOE_12", "GPIOE_13", "GPIOE_14", "GPIOE_15",    "NONE",   "INVALID",   "INVALID",   "INVALID",   "INVALID",   "INVALID",   "INVALID",   "INVALID",   "INVALID",   "INVALID",    "INVALID",    "INVALID",    "INVALID",    "INVALID",    "INVALID",    "INVALID",   "INVALID",   "INVALID",   "INVALID",   "INVALID",   "INVALID",   "INVALID",   "INVALID",   "INVALID",   "INVALID",   "INVALID",    "INVALID",    "INVALID",    "INVALID",    "INVALID",    "INVALID",    "INVALID",   "INVALID",   "INVALID",   "INVALID",   "INVALID",   "INVALID",   "INVALID",   "INVALID",   "INVALID",   "INVALID",   "INVALID",    "INVALID",    "INVALID",    "INVALID",    "INVALID",    "INVALID",    "INVALID"
+custom pin_output_mode_e 4 bits,    U32,   @OFFSET@, [0:1], "default", "default inverted", "open", "open inverted"
+
 custom air_pressure_sensor_type_e 4 bits, U32, @OFFSET@, [0:1]  "Custom", "DENSO183", "MPX4250", "INVALID"
 custom adc_channel_e 4 bits, U32, @OFFSET@, [0:3]  "PA0", "PA1", "PA2", "PA3", "PA4", "PA5", "PA6", "PA7", "PB0", "PB1", "PC0", "PC1", "PC2", "PC3", "PC4", "PC5"
 
@@ -237,14 +240,17 @@ float[FUEL_LOAD_COUNT] veLoadBins;;1,   0.0,        0,  300.0,   2
 	float[FUEL_LOAD_COUNT] afrLoadBins;;1,   0.0,        0,  300.0,   2
 	float[FUEL_RPM_COUNT] afrRpmBins;;"RPM",	   1,   0.0,        0,  18000.0, 2
 	
-custom fuel_table_t	1024 TODO
-custom ignition_table_t	1024 TODO
+custom fuel_table_t	1024 array,   F32,   @OFFSET@, [16x16],"ms",      1,     0,      0.0,   300.0,   2
+custom ignition_table_t	1024 array,   F32,   @OFFSET@, [16x16],"deg",	   1,     0,     -360,  360,    2
 		
 fuel_table_t fuelTable;
 ignition_table_t ignitionTable;
 
-	fuel_table_t veTable;
-	fuel_table_t afrTable;		
+custom ve_table_t 1024 array,   F32,   @OFFSET@, [16x16],"deg",     1,     0,        0,  100.0,    2 
+	ve_table_t veTable;
+
+custom afr_table_t 1024 array,   F32,   @OFFSET@, [16x16],"deg",	   1,     0,        0,  25.0,     2 
+	afr_table_t afrTable;		
 	
 #define INJECTION_PIN_COUNT 12
 #define IGNITION_PIN_COUNT 12
@@ -254,7 +260,7 @@ ignition_table_t ignitionTable;
 #define JOYSTICK_PIN_COUNT 5
 	
 	
-struct board_configuration_s
+struct_no_prefix board_configuration_s
 	brain_pin_e idleValvePin;
 	pin_output_mode_e idleValvePinMode;
 
