--- a/trunk/firmware/rusefi_config.ini
+++ b/trunk/firmware/rusefi_config.ini
@@ -267,10 +267,10 @@ struct_no_prefix board_configuration_s
 	brain_pin_e fuelPumpPin;
 	pin_output_mode_e fuelPumpPinMode;
 
-	brain_pin_e[INJECTION_PIN_COUNT] injectionPins;
+	brain_pin_e[INJECTION_PIN_COUNT iterate] injectionPins;
 	pin_output_mode_e injectionPinMode;
 
-	brain_pin_e[IGNITION_PIN_COUNT] ignitionPins;
+	brain_pin_e[IGNITION_PIN_COUNT iterate] ignitionPins;
 	pin_output_mode_e ignitionPinMode;
 
 	brain_pin_e malfunctionIndicatorPin;
