--- a/trunk/firmware/rusefi_config.ini
+++ b/trunk/firmware/rusefi_config.ini
@@ -298,18 +298,20 @@ brain_pin_e clutchDownPin;some cars have a switch to indicate that clutch pedal 
 	brain_pin_e gps_rx_pin;
 	brain_pin_e gps_tx_pin;
 
-	int idleSolenoidFrequency;
+	int idleSolenoidFrequency;;"Hz",      1,      0,       0, 3000,      0
 
-	int triggerSimulatorFrequency;
+	int triggerSimulatorFrequency;;"Rpm",     1,      0,       0,30000,      0
 	
 spi_device_e digitalPotentiometerSpiDevice;Digital Potentiometer is used by stock ECU stimulation code
 #define DIGIPOT_COUNT 4
-	brain_pin_e[DIGIPOT_COUNT] digitalPotentiometerChipSelect;
+	brain_pin_e[DIGIPOT_COUNT iterate] digitalPotentiometerChipSelect;
+
 #define HW_MAX_ADC_INDEX 16
-	adc_channel_mode_e[HW_MAX_ADC_INDEX] adcHwChannelEnabled;
+custom adc_channel_mode_e 4 bits,    U32,   @OFFSET@, [0:1], "Off", "Slow", "Fast", "INVALID" 
+	adc_channel_mode_e[HW_MAX_ADC_INDEX iterate] adcHwChannelEnabled;
 
 
-	brain_pin_e[3] triggerInputPins;
+	brain_pin_e[3 iterate] triggerInputPins;
 	brain_pin_e mainRelayPin;
 
 	int idleThreadPeriod;
@@ -319,7 +321,7 @@ spi_device_e digitalPotentiometerSpiDevice;Digital Potentiometer is used by stoc
 	int generalPeriodicThreadPeriod;
 
 
-	uint32_t tunerStudioSerialSpeed;
+	uint32_t tunerStudioSerialSpeed;;"BPs",      1,      0,       0,1000000,      0
 
 	brain_pin_e boardTestModeJumperPin;
 
