https://sourceforge.net/p/rusefi/tickets/125/

--- a/firmware/rusefi_config.ini
+++ b/firmware/rusefi_config.ini
@@ -364,7 +364,7 @@ custom egt_cs_array_t 32 todo array? type?
 	brain_pin_e acRelayPin;
 	pin_output_mode_e acRelayPinMode;
 
-	int16_t[LE_COMMAND_COUNT] fsioFrequency;
+	fsio_pwm_freq_t[LE_COMMAND_COUNT] fsioFrequency;
 
 	brain_pin_e hip9011CsPin;
 	brain_pin_e hip9011IntHoldPin;
