https://sourceforge.net/p/rusefi/tickets/125/

--- a/firmware/rusefi_config.ini
+++ b/firmware/rusefi_config.ini
@@ -388,8 +388,8 @@ custom analog_chart_e 4 bits, S32, @OFFSET@, [0:1], "none", "trigger", "MAP", "I
 analog_chart_e analogChartMode;
 	int[6] unusedbs;
 
-custom le_formula_t 200 todo
-le_formula_t[LE_COMMAND_COUNT] le_formulas;
+custom le_formula_t 200 array, U08, @OFFSET@, [200],"char", 1, 0, 0.0, 3.0, 2
+le_formula_t[LE_COMMAND_COUNT iterate] le_formulas;
 
 end_struct	
 	
@@ -431,17 +431,17 @@ bit hasMapSensor;@see isMapAveragingEnabled
 	
 
 
-	uint32_t digitalChartSize;
+	uint32_t digitalChartSize;;"count",      1,      0,       0, 300,      0
 
-	float injectorFlow;cc/min, cubic centimeter per minute\nBy the way, g/s = 0.125997881 * (lb/hr)\ng/s = 0.125997881 * (cc/min)/10.5\ng/s = 0.0119997981 * cc/min
+	float injectorFlow;cc/min, cubic centimeter per minute\nBy the way, g/s = 0.125997881 * (lb/hr)\ng/s = 0.125997881 * (cc/min)/10.5\ng/s = 0.0119997981 * cc/min;"cm3/min",  1,     0,      0,   1000,   2
 
-	float[CRANKING_CURVE_SIZE] crankingFuelCoef;
-	float[CRANKING_CURVE_SIZE] crankingFuelBins;
+	float[CRANKING_CURVE_SIZE] crankingFuelCoef;;"%",      100,     0,      0.0,    700.0,   2
+	float[CRANKING_CURVE_SIZE] crankingFuelBins;;"C",        1,     0,    -80.0,    170.0,  2
 
-	float[CRANKING_CURVE_SIZE] crankingCycleCoef;
-	float[CRANKING_CURVE_SIZE] crankingCycleBins;
+	float[CRANKING_CURVE_SIZE] crankingCycleCoef;;"%",      100,     0,      0.0,    500.0,   2
+	float[CRANKING_CURVE_SIZE] crankingCycleBins;;"C",        1,     0,    -80.0,    170.0,  2
 
-	float ignitionDwellForCrankingMs;
+	float ignitionDwellForCrankingMs;;"ms",        1,     0,    0, 200,     1
 
 	int targetIdleRpm;
 
@@ -465,8 +465,11 @@ bit hasMapSensor;@see isMapAveragingEnabled
 	brain_pin_e clutchUpPin;Some vehicles have a switch to indicate that clutch pedal is all the way up
 	pin_input_mode_e clutchUpPinMode;
 	float hipThreshold;
-	brain_pin_e[LE_COMMAND_COUNT] fsioInputs;
-	pin_input_mode_e[LE_COMMAND_COUNT] fsioInputModes;
+	brain_pin_e[LE_COMMAND_COUNT iterate] fsioInputs;
+
+custom pin_input_mode_e 4 scalar, F32,	@OFFSET@,	"ms", 1, 0, 0, 200, 1	
+	pin_input_mode_e[LE_COMMAND_COUNT iterate] fsioInputModes;
+	
 	int[149] unused3;
 
 	le_formula_t timingMultiplier;
