batch control flexibility

--- a/firmware/rusefi_config.ini
+++ b/firmware/rusefi_config.ini
@@ -428,6 +428,7 @@ bit hasMapSensor;@see isMapAveragingEnabled
 	bit isIdleThreadEnabled
 	bit isPrintTriggerSynchDetails
 	bit isManualSpinningMode;Usually if we have no trigger events that means engine is stopped\nUnless we are troubleshooting and spinning the engine by hand - this case a longer\ndelay is needed
+		bit twoWireBatch
 	
 
 
